# mad-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRACTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs-sync.yml  docs-validate.yml  release.yml  testpypi-preview.yml
docs/: .docs-manifest.yaml  README.md
docs/01-overview/: context.md  glossary.md  passport.md  scope.md
docs/02-architecture/: components.md  overview.md  source-tree.md  test-tree.md
docs/03-contracts/: cli.md  external-dependencies.md  http-api.md
docs/04-conventions/: cli-design.md  layering.md  quality.md  testing-strategy.md
docs/05-operations/: ci-cd.md  configuration.md  installation.md  release.md
docs/06-history/: changelog.md
src/mad_cli/: __init__.py  __main__.py  app.py
src/mad_cli/commands/: __init__.py  _adapt.py  _common.py  config.py  install.py  instances.py  keys.py  lifecycle.py  profiles.py  service.py  versions.py
src/mad_cli/core/: __init__.py  claude_creds.py  compose.py  docker_check.py  envfile.py  instance.py  keyspec.py  paths.py  profiles.py  pypi.py  templates.py
src/mad_cli/core/usecases/: __init__.py  adopt.py  configvals.py  errors.py  install.py  instances.py  keys.py  lifecycle.py  service.py  versions.py
src/mad_cli/server/: __init__.py  app.py  auth.py  models.py
src/mad_cli/templates/: Dockerfile.tmpl  __init__.py  com.mad-core.mad-cli.plist.tmpl  compose.yml.tmpl  entrypoint.sh.tmpl  mad-cli.service.tmpl
src/mad_cli/ui/: __init__.py  console.py  prompts.py
tests/unit/commands/: conftest.py  test_app.py  test_config.py  test_install.py  test_instances.py  test_keys.py  test_lifecycle.py  test_profiles.py  test_service_cli.py  test_versions.py
tests/unit/core/: test_claude_creds.py  test_compose.py  test_docker_check.py  test_envfile.py  test_instance.py  test_keyspec.py  test_paths.py  test_profiles.py  test_pypi.py  test_templates.py
tests/unit/core/usecases/: test_install_flow.py  test_service.py
tests/unit/server/: test_api.py
tests/unit/ui/: test_prompts.py
