[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "mad-cli"
version = "0.4.0"
description = "Operator CLI for Mad — guided install, lifecycle, configuration, keys and version management for mad-edge containers."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Jose Salamanca", email = "jose.salamancacoy@gmail.com" },
]
requires-python = ">=3.11"
keywords = ["claude", "agents", "docker", "cli", "mad", "self-hosted", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
# The local HTTP API (`mad serve` / `mad service`). Kept out of the base install
# so the CLI stays a two-dependency package (typer + rich); `pip install
# 'mad-cli[server]'` opts in, or `mad service install` auto-provisions it into a
# dedicated venv. `import mad_cli.app` never imports fastapi transitively.
server = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-timeout>=2.3",
  "ruff>=0.6",
  "mypy>=1.10",
  "pip-audit>=2.7",
  "build>=1.2",
  "twine>=5.1",
  "python-semantic-release>=10.5.3",
  # The server extra plus its test client, so CI exercises the HTTP API.
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "httpx>=0.27",
]

[project.scripts]
mad = "mad_cli.app:main"

[project.urls]
Homepage = "https://github.com/mad-core/mad-cli"
Repository = "https://github.com/mad-core/mad-cli"
Issues = "https://github.com/mad-core/mad-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mad_cli"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["mad_cli"]

[[tool.mypy.overrides]]
# The framework-free engine, incl. the use-case layer (mad_cli.core.usecases.*),
# is type-checked strictly.
module = "mad_cli.core.*"
strict = true

[[tool.mypy.overrides]]
# uvicorn ships no type stubs; we only touch its runtime `run` entry point.
module = "uvicorn.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 15
markers = [
  "docker: tests that require a running Docker daemon (deselected by default)",
]
addopts = "-m 'not docker'"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/mad_cli/__init__.py:__version__"]
build_command = "python -m pip install build && python -m build"
commit_parser = "conventional"
tag_format = "v{version}"
major_on_zero = false
upload_to_vcs_release = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.commit_parser_options]
# Org policy (see mad-edge hard rule 12): feat is demoted to a patch tag on 0.x;
# minor/major bumps are always deliberate (BREAKING CHANGE footer or release_kind dispatch).
patch_tags = ["feat", "fix", "perf"]
minor_tags = []
